--- a/Resources/translations/messages.en.xlf
+++ b/Resources/translations/messages.en.xlf
@@ -10,6 +10,10 @@
         <source>breadcrumb.link_menu_item_list</source>
         <target>Menu entry</target>
       </trans-unit>
+      <trans-unit id="breadcrumb.link_page_create">
+        <source>breadcrumb.link_page_create</source>
+        <target>Create Site</target>
+      </trans-unit>
       <trans-unit id="breadcrumb.link_page_list">
         <source>breadcrumb.link_page_list</source>
         <target>Site</target>
@@ -49,6 +53,10 @@
       <trans-unit id="label.cms.admin.menu_item_title">
         <source>label.cms.admin.menu_item_title</source>
         <target>Title</target>
+      </trans-unit>
+      <trans-unit id="label.cms.admin.position">
+        <source>label.cms.admin.position</source>
+        <target>Position</target>
       </trans-unit>
       <trans-unit id="label.cms.admin.menu_item_type">
         <source>label.cms.admin.menu_item_type</source>
